<resources>
    <string name="app_name">RecipeStorage</string>
    <string name="new_recipe_button">new_recipe_button</string>
    <string name="create_a_new_recipe">Create A New Recipe</string>
    <string name="Title">Title</string>
    <string name="Course">Course</string>
    <string name="Origin">Origin</string>
    <string name="Ingredient">Ingredient</string>
    <string name="new_element">+</string>
    <string name="Step">Step</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="Unit">Unit</string>
    <string name="Amount">Amount</string>
    <string name="Prep">Prep Time (mins) </string>
    <string name="Cook">Cook Time (mins) </string>
    <string name="cook_time">Cook Time:</string>
    <string name="prep_time">Prep Time:</string>
    <string name="search">Search</string>
    <string name="Search">Search</string>
    <string name="h">h</string>
    <string name="m">m</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="ingredients">Ingredients :</string>
    <string name="steps">Steps :</string>
    <string name="edit_recipe">EDIT RECIPE</string>
    <string name="delete_warning_row">Are you sure you want to delete this row?</string>
    <string name="logout_warning">Are you sure you want to logout?</string>
    <string name="delete_warning_recipe">Are you sure you want to delete this recipe? \nThis action is not reversible.</string>
    <string name="logout">Logout</string>
</resources>